chore(api): perf for components and releases
Performance improvements for /components and /releases
1. Use Nouveau by default if no filtering is provided and `luceneSearch`
   is true.
2. Use `parallelStream` to perform operations where possible.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>